mbtypes: add implementation of the all functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
 add_executable(
     moneybeast-cli
     main.cxx
+    mbtypes.cxx
     include/main.hxx
     include/mbtypes.hxx
 )
